# MUDDC

./: .gitignore  CMakeLists.txt  ReadMe.md
lib/MUDDC/: CMakeLists.txt
lib/MUDDC/include/MUDDC/: BaseController.h  BaseDevicesAndEndpoint.h  DatagramIn.h  DatagramOut.h  MainController.h  VarPtrProxy.h  bitFunctions.h
lib/MUDDC/src/: BaseController.cpp  BaseDevicesAndEndpoint.cpp  DatagramIn.cpp  DatagramOut.cpp  MainController.cpp  tusb_config.h  usb_descriptor.cpp
realizations/ed72/: CMakeLists.txt
realizations/ed72/config/: eu07_input-uart.ini
realizations/ed72/src/: DatagramOutSwitches.h  ED72.cpp  ED72.h  main.cpp
src/: RawData.cpp  RawData.h
tools/: serialtester.py
